--- a/wanted-poster/css/style.css
+++ b/wanted-poster/css/style.css
@@ -64,18 +64,19 @@ body {
 /* Specific Styles for "WANTED" heading */
 h1 {
     font-size: 6rem;
-    color: #a30000;
-    text-shadow: 3px 3px 5px rgba(0, 0, 0, 0.5);
-    margin: 1rem 0;
+    color:darkred;
+    text-shadow: .09375rem .09375rem .09375rem #000;
+    margin: 0;
+    letter-spacing: .5rem;
     text-align: center;
     text-transform: uppercase;
-    font-weight: 900;
+    font-family:'Alfa Slab One', Garamond, serif;
 }
 
 /* Headings */
 h2, h3, h4, h5 {
     text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
-    color: #a30000;
+    color:darkred;
     font-family: 'Arial Black', Gadget, sans-serif;
     margin: 1rem 0;
     text-align: center;
