--- a/wanted-poster/css/style.css
+++ b/wanted-poster/css/style.css
@@ -75,7 +75,7 @@ h1 {
 
 /* Headings */
 h2, h3, h4, h5 {
-    text-shadow: 0.2rem 0.2rem 0.5rem rgba(0, 0, 0, 0.3);
+    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
     color:darkred;
     font-family: 'Arial Black', Gadget, sans-serif;
     margin: 1rem 0;
@@ -121,8 +121,8 @@ h5 {
 section {
     margin-top: 0.5rem;
     padding: 1rem;
-    border: .1rem solid #ccc;
-    box-shadow: 0 0 1rem rgba(0, 0, 0, 0.1);
+    border: 1px solid #ccc;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 p {
@@ -148,7 +148,7 @@ img {
     margin: 0 auto;
     max-width: 50rem;
     border: 1px solid #ccc;
-    box-shadow: 0 0 1rem rgba(0, 0, 0, 0.5);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 /* Footer */
@@ -159,7 +159,7 @@ footer {
 
 /* Additional Styles for header */
 header {
-    border-bottom: .2rem solid #000;
+    border-bottom: 2px solid #000;
     padding: 1rem;
 }
 
@@ -172,8 +172,8 @@ section {
 main {
     background: url('images/wrinkled-white-paper-background.jpg') no-repeat center center fixed;
     background-size: cover;
-    box-shadow: 0 0 1rem rgba(0, 0, 0, 0.5);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     margin: 2rem auto;
-    max-width: 80rem;
+    max-width: 800px;
     padding: 2rem;
 }
